Bug 430662 - Kwin App menu opens in separate window in Wayland
Summary: Kwin App menu opens in separate window in Wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: appmenu (other bugs)
Version First Reported In: 5.20.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
: 376821 411448 423332 426614 428820 432118 433420 433831 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-12-21 11:34 UTC by Jebin
Modified: 2021-05-19 12:23 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
Titlebar App menu opening its own window (54.16 KB, image/png)
2021-01-11 18:17 UTC, Jebin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jebin 2020-12-21 11:34:52 UTC
SUMMARY
I've added app menu in titlebar. When I access it in Wayland session, it opens separate window for menus and submenus. I think this could be somewhat related to drop-down menu behaviour in kwin on wayland.

STEPS TO REPRODUCE
1. Add app menu to title bar.
2. Open app menu while on wayland session.

OBSERVED RESULT
The app menu opens in separate window. Also, the same case for sub-menus.

EXPECTED RESULT
The app menu should be more like a drop down list from the app menu icon.

SOFTWARE/OS VERSIONS

Operating System: Fedora 33
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.2
Kernel Version: 5.9.14-200.fc33.x86_64
OS Type: 64-bit
Comment 1 Nate Graham 2021-01-05 16:56:26 UTC
Can you attach a screenshot that shows the issue?
Comment 2 Jebin 2021-01-11 18:17:58 UTC
Created attachment 134749 [details]
Titlebar App menu opening its own window

Also, the KDE Daemon windows stack on top of each other, rendering the app menu completely unusable. I have moved the windows for more clarity in this screenshot.
Comment 3 Bug Janitor Service 2021-01-26 04:33:28 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 4 Nate Graham 2021-01-27 20:20:22 UTC
*** Bug 432118 has been marked as a duplicate of this bug. ***
Comment 5 Jebin 2021-02-01 13:52:22 UTC
Just my thought. The current implementation of App menu is not that great in X11 as well. There is a flicker which occurs when we switch from one menu to another. I believe this is because each menu opens as separate borderless window and there is a minute gap during which the original application becomes focused before the transition to next menu. If this one - https://bugs.kde.org/show_bug.cgi?id=375951 is currently in implementation, this could be a better replacement for the current app menu.
Comment 6 Nate Graham 2021-02-23 04:24:07 UTC
*** Bug 433420 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2021-03-02 19:04:32 UTC
*** Bug 433831 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2021-03-04 19:44:19 UTC
*** Bug 411448 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2021-03-04 19:44:24 UTC
*** Bug 428820 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2021-03-04 19:44:28 UTC
*** Bug 426614 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2021-04-25 16:43:01 UTC
*** Bug 423332 has been marked as a duplicate of this bug. ***
Comment 12 Bug Janitor Service 2021-05-04 07:18:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/839
Comment 13 David Redondo 2021-05-12 10:20:01 UTC
Git commit 72620a6f2f5b3b6d580ff75c42a1df2d96a1bc31 by David Redondo.
Committed on 12/05/2021 at 10:19.
Pushed by davidre into branch 'master'.

Make appmenu work properly on Wayland

The toplevel menu is positioned using the plasmashell protocol.
For QtWayland to create popups we need a input serial. The input serial
is manually set to the enter one for creating poups.
FIXED-IN:5.23

M  +2    -0    CMakeLists.txt
M  +3    -0    appmenu/CMakeLists.txt
M  +48   -4    appmenu/appmenu.cpp
M  +10   -0    appmenu/appmenu.h

https://invent.kde.org/plasma/plasma-workspace/commit/72620a6f2f5b3b6d580ff75c42a1df2d96a1bc31
Comment 14 Mircea Kitsune 2021-05-12 13:29:56 UTC
Read about it in the change log. Thanks for fixing another huge issue which brings Plasma closer to being usable on Wayland!
Comment 15 David Redondo 2021-05-19 12:23:31 UTC
*** Bug 376821 has been marked as a duplicate of this bug. ***