Make appmenu work properly on Wayland

The toplevel menu is positioned using the plasmashell protocol.
For QtWayland to create popups we need a input serial. The input serial
is manually set to the enter one for creating poups.
BUG:430662
FIXED-IN:5.23